--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h2> 어디로 떠나고 싶으세요? </h2>
                 <div class="vs_search">
                     <input type="text" class="main__search" placeholder="도시,국가를 입력해주세요.">
-                    <button type="button" class="main__searchBtn"><span class="fas fa-search">검색</span></button>
+                    <input type="button" class="main__searchBtn" value="&#xf002">
                 </div>
             </div>
             <div class="main__city">
