--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 <body>
     <header>
+        <div class="site__logo">
+            <a href="#"><i class="fas fa-globe-americas"></i> 여행의 민족</a>
+        </div>
         <div class="main__intro">
             <div class="main__word">
                 <h1> 최저가 패키지 <br> 가격비교 </h1>
@@ -110,24 +113,104 @@
         </div>
         </div>
     </header>
-
-    <nav id="navbar">
-        <div class="navbar__logo">
-            <i class="fas fa-globe-americas"></i>
-            <a href="#">여행의 민족</a>
+    <section class="navbar">
+        <div id="navbar">
+            <ul class="navbar__menu">
+                <li class="navbar__menu__item"><i class="far fa-lemon"></i>&nbsp국내/제주여행</li>
+                <li class="navbar__menu__item"><i class="fas fa-stopwatch"></i>&nbsp긴급모객</li>
+                <li class="navbar__menu__item"><i class="fas fa-suitcase-rolling"></i>&nbsp패키지/에어텔</li>
+                <li class="navbar__menu__item"><i class="fas fa-plane"></i>&nbsp항공</li>
+                <li class="navbar__menu__item"><i class="fas fa-hotel"></i>&nbsp호텔</li>
+                <li class="navbar__menu__item"><i class="fas fa-ticket-alt"></i>&nbsp해외입장권/패스</li>
+                <li class="navbar__menu__item"><i class="fas fa-hiking"></i>&nbsp현지투어</li>
+            </ul>
         </div>
+    </section>
+    <section class="Jejutrip">
+        <div class="Jeju">
+            <h2 class="jeju__intro">국내/제주여행</h2>
+            <ul class="jeju__img">
+                <li class="jeju__li">
+                    <a href="#">
+                        <div class="thumb">
+                            <img src="imgs/jeju/jeju_1.jpg" alt="" class="thumbnail">
 
-        <ul class="navbar__menu">
-            <li class="navbar__menu__item">국내/제주여행</li>
-            <li class="navbar__menu__item">긴급모객</li>
-            <li class="navbar__menu__item">패키지/에어텔</li>
-            <li class="navbar__menu__item">항공</li>
-            <li class="navbar__menu__item">호텔</li>
-            <li class="navbar__menu__item">해외입장권/패스</li>
-            <li class="navbar__menu__item">현지투어</li>
-        </ul>
+                            <p class="bn-tit">
+                                <strong>[내륙여행]</strong>
+                                서해남부4島 3일
+                            </p>
+                        </div>
+                        <p class="bn-price">
+                            <strong>254,000</strong>
+                            원~
+                        </p>
+                    </a>
+                </li>
+                <li class="jeju__li">
+                    <a href="#">
+                        <div class="thumb">
+                            <img src="imgs/jeju/jeju_2.jpg" alt="" class="thumbnail">
 
-    </nav>
+                            <p class="bn-tit">
+                                <strong>[제주여행]</strong>
+                                ♥아시아나 우수특가<br>♥자유여행 3일
+                            </p>
+                        </div>
+                        <p class="bn-price">
+                            <strong>170,000</strong>
+                            원~
+                        </p>
+                    </a>
+                </li>
+                <li class="jeju__li">
+                    <a href="#">
+                        <div class="thumb">
+                            <img src="imgs/jeju/jeju_3.jpg" alt="" class="thumbnail">
+                            <p class="bn-tit">
+                                <strong>[제주여행]</strong>
+                                서귀포KAL호텔 자유3일
+                            </p>
+                        </div>
+                        <p class="bn-price">
+                            <strong>194,000</strong>
+                            원~
+                        </p>
+                    </a>
+                </li>
+                <li class="jeju__li">
+                    <a href="#">
+                        <div class="thumb">
+                            <img src="imgs/jeju/jeju_4.jpg" alt="" class="thumbnail">
+                            <p class="bn-tit">
+                                <strong>[숙박여행]</strong>
+                                서울신라호텔
+                            </p>
+                        </div>
+                        <p class="bn-price">
+                            <strong>270,000</strong>
+                            원~
+                        </p>
+                    </a>
+                </li>
+                <li class="jeju__li">
+                    <a href="#">
+                        <div class="thumb">
+                            <img src="imgs/jeju/jeju_5.jpg" alt="" class="thumbnail">
+
+                            <p class="bn-tit">
+                                <strong>[내륙여행]</strong>
+                                베스트 울릉도 3일
+                            </p>
+                        </div>
+                        <p class="bn-price">
+                            <strong>309,000</strong>
+                            원~
+                        </p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
 
 </body>
 
