--- a/index.html
+++ b/index.html
@@ -211,7 +211,75 @@
             </ul>
         </div>
     </section>
+    <section class="slideShow">
+        <div class="slideshow-container">
 
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 8</div>
+                <img src="imgs/bn/ban_1.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 8</div>
+                <img src="imgs/bn/ban_2.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 8</div>
+                <img src="imgs/bn/ban_3.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">4 / 8</div>
+                <img src="imgs/bn/ban_4.jpeg" style="width:100%">
+            </div>
+
+
+            <div class="mySlides fade">
+                <div class="numbertext">5 / 8</div>
+                <img src="imgs/bn/ban_5.jpeg" style="width:100%">
+            </div>
+
+
+            <div class="mySlides fade">
+                <div class="numbertext">6 / 8</div>
+                <img src="imgs/bn/ban_6.jpeg" style="width:100%">
+            </div>
+
+
+            <div class="mySlides fade">
+                <div class="numbertext">7 / 8</div>
+                <img src="imgs/bn/ban_7.jpeg" style="width:100%">
+
+            </div>
+
+
+            <div class="mySlides fade">
+                <div class="numbertext">8 / 8</div>
+                <img src="imgs/bn/ban_8.jpeg" style="width:100%">
+            </div>
+
+
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+        </div>
+        <br>
+
+        <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
+            <span class="dot" onclick="currentSlide(7)"></span>
+            <span class="dot" onclick="currentSlide(8)"></span>
+
+        </div>
+    </section>
+
+    <script src="slidebanner.js"></script>
 </body>
 
 </html>
