--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/earlyaccess/notosanskr.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/339fb6c192.js" crossorigin="anonymous"></script>
+    <script src="slidebanner.js" defer></script>
     <title>여행의 민족</title>
 </head>
 
@@ -279,7 +280,7 @@
         </div>
     </section>
 
-    <script src="slidebanner.js"></script>
+
 </body>
 
 </html>
